framec_tests/language_specific/typescript/v3_facade_smoke/negative/strict_bad_arrow_params.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                -> $B();
                const f = a, b) => { return a + b; } // missing '('
            }
        }
        $B {
        }
}

